Fixed the alignment of the profile cards

--- a/client/react/containers/ScheduleMeeting/styles.css
+++ b/client/react/containers/ScheduleMeeting/styles.css
@@ -3,6 +3,10 @@
     margin-top: 30px;
 }
 
+#scheduleMeetingContainer #landlordSectionWrapper .ui.card .meta, #scheduleMeetingContainer #landlordSectionWrapper .ui.card .header {
+    text-align: left;
+}
+
 #scheduleMeetingContainer #listingSectionWrapper {
     margin-top: 30px;
 }
